--- a/.github/workflows/nocc-posts-update.yml
+++ b/.github/workflows/nocc-posts-update.yml
@@ -9,7 +9,7 @@ permissions:
 jobs:
   update-readme-with-blog:
     name: Update this repo's README with latest blog posts
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
